Fixes navigation alignment issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -298,7 +298,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 }
 
 .widget.extendednavigation ul li.folder {
-  display: block;
   background-position: right 17px;
   background-repeat: no-repeat;
   padding-right: 10px;
@@ -2132,7 +2131,7 @@ hr.line.align-right {
   }
 
   .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
-      padding: 5px 0;
+      padding: 5px 25px;
       margin: 0;
   }
 
